--- a/components/radiobutton/editor.html
+++ b/components/radiobutton/editor.html
@@ -12,7 +12,7 @@
 	exports.group = 'Controls';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-dot-circle';
-	exports.config = { required: false };
+	exports.config = { required: false, default: 1 };
 	exports.settings = '/components/radiobutton/settings.html';
 	exports.render = '/components/radiobutton/render.html';
 	exports.follow = true;
