--- a/components/radiobutton/settings.html
+++ b/components/radiobutton/settings.html
@@ -6,7 +6,11 @@
 
 	<div class="grid-3">
 		<div class="m">
-			<ui-component name="input" path="?.icon" config="innerlabel:1;type:icon;placeholder:Choose icon">Icon</ui-component>
+			<ui-component name="input" path="?.default" config="type:number;placeholder:Set default value">Default</ui-component>
+			<div class="help">If not setted default will be "1"</div>
+		</div>
+		<div class="m">
+			<ui-component name="input" path="?.icon" config="type:icon;placeholder:Choose icon">Icon</ui-component>
 		</div>
 	</div>
 
