--- a/components/checkboxlist/settings.html
+++ b/components/checkboxlist/settings.html
@@ -1,12 +1,12 @@
 <div class="padding">
 
 	<div class="m">
-		<ui-component name="input" path="?.datasourceid" config="dirsource:#datasource;dirraw:1;innerlabel:1">Datasource</ui-component>
+		<ui-component name="input" path="?.datasource" config="dirsource:#datasource;dirraw:1;innerlabel:1">Datasource</ui-component>
 	</div>
 
 	<div class="grid-3">
 		<div class="m">
-			<ui-component name="input" path="?.icon" config="innerlabel:1;type:icon;placeholder:Choose icon">Icon</ui-component>
+			<ui-component name="input" path="?.icon" config="type:icon;placeholder:Choose icon">Icon</ui-component>
 		</div>
 	</div>
 
