--- a/components/dropdown/settings.html
+++ b/components/dropdown/settings.html
@@ -6,16 +6,16 @@
 
 	<div class="grid-3">
 		<div class="m">
-			<ui-component name="input" path="?.error" config="innerlabel:1;placeholder:A custom error message">Error message</ui-component>
+			<ui-component name="input" path="?.error" config="placeholder:A custom error message">Error message</ui-component>
 		</div>
 		<div class="m">
-			<ui-component name="input" path="?.help" config="innerlabel:1;placeholder:Enter a value">Help message</ui-component>
+			<ui-component name="input" path="?.help" config="placeholder:Enter a value">Help message</ui-component>
 		</div>
 		<div class="m">
-			<ui-component name="input" path="?.placeholder" config="innerlabel:1;placeholder:Enter a value">Placeholder</ui-component>
+			<ui-component name="input" path="?.placeholder" config="placeholder:Enter a value">Placeholder</ui-component>
 		</div>
 		<div class="m">
-			<ui-component name="input" path="?.icon" config="innerlabel:1;type:icon;placeholder:Choose icon">Icon</ui-component>
+			<ui-component name="input" path="?.icon" config="type:icon;placeholder:Choose icon">Icon</ui-component>
 		</div>
 
 	</div>
