--- a/components/color/settings.html
+++ b/components/color/settings.html
@@ -2,10 +2,10 @@
 
 	<div class="grid-3">
 		<div class="m">
-			<ui-component name="input" path="?.help" config="innerlabel:1;placeholder:Enter a value">Help message</ui-component>
+			<ui-component name="input" path="?.help" config="placeholder:Enter a value">Help message</ui-component>
 		</div>
 		<div class="m">
-			<ui-component name="input" path="?.icon" config="innerlabel:1;type:icon;placeholder:Choose icon">Icon</ui-component>
+			<ui-component name="input" path="?.icon" config="type:icon;placeholder:Choose icon">Icon</ui-component>
 		</div>
 	</div>
 
