--- a/components/checkboxlist/settings.html
+++ b/components/checkboxlist/settings.html
@@ -12,5 +12,6 @@
 
 	<hr style="margin-top:10px" />
 	<ui-component name="input" path="?.required" config="type:checkbox" class="b">Required</ui-component>
+	<ui-component name="input" path="?.nolabel" config="type:checkbox">Hide label</ui-component>
 
 </div>
