--- a/components/checkboxlist/render.html
+++ b/components/checkboxlist/render.html
@@ -4,7 +4,7 @@
 
 	.CLASS figure * { cursor: pointer; }
 	.CLASS figure span { width: 20px; height: 20px; line-height: 19px; font-size: 11px; margin: 0 7px 0 0; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: var(--radius); background: #fff; }
-	.CLASS figure div { line-height: 22px; font-size: 12px; margin-bottom: 3px; display: block; outline: 0; }
+	.CLASS figure div { line-height: 22px; font-size: 12px; margin-bottom: 3px; display: block; outline: 0; margin-left: 30px; margin-bottom: 5px; }
 	.CLASS figure span i { display: none; font-weight: bold; }
 	.CLASS figure.UI_checked span { background-color: var(--color); border-color: var(--color); }
 	.CLASS figure.UI_checked span i { display: inline-block; color: #fff; }
@@ -15,6 +15,8 @@
 	.CLASS.UI_disabled * { cursor: not-allowed !important; }
 	.CLASS.UI_disabled figure { color: #a0a0a0; }
 	.CLASS.UI_disabled figure span { background-color: #f0f0f0; color: #b0b0b0; border-color: #e0e0e0; }
+
+
 </style>
 
 <body>
