--- a/components/datagrid/render.html
+++ b/components/datagrid/render.html
@@ -4,17 +4,21 @@
 
 <script>
 
-	exports.id = 'viewer';
-	exports.name = 'Show components';
-	exports.group = 'Controls';
-	exports.icon = 'ti ti-eye';
+	exports.id = 'datagrid';
+	exports.name = 'Datagrid';
+	exports.group = 'List';
+	exports.icon = 'ti ti-table-alt';
 	exports.author = 'Total.js';
 	exports.version = '1';
+	exports.outputs = [{ id: 'row', name: 'On row' }, { id: 'button', name: 'On button' }];
 
 	exports.make = function(instance, config, element) {
 
 		var cfg = [];
 		var path = 'uibuildercom_' + instance.id;
+		var pathfn = path + '_exec';
+		var pathclick = path + '_click';
+		var isdynamic = config.dynamic && config.datasource && config.datasource.charAt(0) === '#' ? true : false;
 
 		if (typeof(config.height) === 'string' && config.height === 'parent')
 			config.height += '1';
@@ -36,6 +40,9 @@
 		if (config.autoselect)
 			cfg.push('autoselect:1');
 
+		if (config.dynamic)
+			cfg.push('exec:' + pathfn);
+
 		if (!config.numbering)
 			cfg.push('numbering:false');
 
@@ -43,6 +50,27 @@
 			cfg.push('dblclick:' + pathdblclick);
 
 		cfg.push('checkbox:' + (config.checkbox ? 1 : 0));
+
+		W[pathclick] = function(row) {
+			if (row)
+				instance.output('row', row);
+		};
+
+		if (isdynamic) {
+			W[pathfn] = function(type, filter, sort, page) {
+				if (!filter)
+					filter = {};
+				filter.sort = sort;
+				filter.page = page;
+				instance.view(config.datasource, filter, function(response) {
+					if (!response)
+						response = { page: 1, pages: 0, items: [], count: 0 };
+					else if (response instanceof Array)
+						response = { page: 1, pages: 1, items: response, count: response.length };
+					SET(path, response);
+				});
+			};
+		}
 
 		var columns = [];
 
@@ -94,12 +122,20 @@
 		}
 
 		// DataGrid
-		element.html(('<ui-component name="datagrid" path="{0}" config="{1};click:{3};highlight:1"><scr' + 'ipt type="text/html">{2}</scr' + 'ipt></ui-component>').format(path, cfg.join(';'), JSON.stringify(columns), self.path));
+		element.html(('<ui-component name="datagrid" path="{0}" config="{1};click:{3};checkbox:0;highlight:1"><scr' + 'ipt type="text/html">{2}</scr' + 'ipt></ui-component>').format(path, cfg.join(';'), JSON.stringify(columns), pathclick));
 
 		instance.on('ready', function() {
-			instance.datasource(config.datasource, function(response) {
-				SET(path, response);
-			});
+			if (!isdynamic) {
+				instance.datasource(config.datasource, function(response) {
+					SET(path, response);
+				});
+			}
+		});
+
+		instance.on('destroy', function() {
+			delete W[path];
+			delete W[pathclick];
+			delete W[pathfn];
 		});
 
 	};
