--- a/components/infocard/render.html
+++ b/components/infocard/render.html
@@ -1,15 +1,14 @@
 <style>
-	.CLASS { height: 60px; }
-	.CLASS > div { line-height: 22px; height: 60px; }
+	.CLASS > div { line-height: 26px; }
 	.CLASS > div:first-child { float: left; width: 4px; height: 60px; background-color: #e0e0e0; margin-right: var(--gap); }
-	.CLASS_key { color: gray; padding-top: 7px; }
+	.CLASS_key { color: gray; padding-top: 4px; }
 	.CLASS_value { font-weight: bold; font-size: 22px; }
 </style>
 
 <body>
 	<div class="CLASS_icon"><i class="{{ icon }}"></i></div>
+	<div class="CLASS_key hellip">{{ key }}</div>
 	<div class="CLASS_value hellip">{{ value }}</div>
-	<div class="CLASS_key hellip">{{ date }}</div>
 </body>
 
 <script>
@@ -20,7 +19,6 @@
 	exports.icon = 'ti ti-address-card';
 	exports.author = 'Total.js';
 	exports.version = '1';
-
 	exports.make = function(instance, config, element, cls) {
 
 		var html = instance.maketemplate()(config);
