--- a/components/link/settings.html
+++ b/components/link/settings.html
@@ -1,5 +1,5 @@
 <div class="padding">
-	<ui-component name="input" path="?.url" config="required:1;dirsource:#apps;dircustom:1" class="m">@(URL address to the app source (JSON))</ui-component>
+	<ui-component name="input" path="?.url" config="required:1;dirsource:#apps;dirraw:1;dircustom:1" class="m">@(URL address to the app source (JSON))</ui-component>
 	<ui-component name="input" path="?.resetcss" config="type:checkbox">@(Reset element CSS)</ui-component>
 	<hr />
 	<div class="grid-2">
