--- a/components/part/editor.html
+++ b/components/part/editor.html
@@ -14,7 +14,7 @@ The form collects only components with defined paths.
 	exports.group = 'Parts';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-object-group';
-	exports.config = { border: false, checkvisible: true };
+	exports.config = { border: false, checkvisible: true, url: '' };
 	exports.render = '/components/part/render.html';
 	exports.settings = '/components/part/settings.html';
 	exports.type = ['app', 'dashboard', 'mobile', 'uicomponent'];
