--- a/components/cards/editor.html
+++ b/components/cards/editor.html
@@ -14,6 +14,8 @@
 	.CLASS_cards_label { font-size: 12px; color: #999; padding: 2px 15px; }
 	.CLASS_cards_hr hr { margin: 0; }
 	.CLASS_cards_empty { height: 10px; }
+	.CLASS_cards_header { display: flex; justify-content: flex-end; padding: 4px; }
+	.CLASS_cards_header button { border: 0; background-color: transparent; font-size: 14px; color: gray; }
 	.CLASS_shadow .CLASS_cards { box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
 	.CLASS_radius .CLASS_cards { border-radius: var(--radius); }
 </style>
@@ -58,19 +60,24 @@
 	exports.config = { border: true, count: 4, items: [{ type: 'image', value: '{{ value.photo }}' }, { type: 'empty' }, { type: 'title', value: '{{ value.title }}' }, { type: 'empty' }] };
 	exports.gap = true;
 	exports.version = '1';
+	exports.outputs = [{ id: 'card', name: 'On card' }, { id: 'button', name: 'On button' }];
 	DEF.cl.componentcards = [{ id: 'image', icon: 'ti ti-image', name: 'Image' }, { id: 'title', icon: 'ti ti-heading', name: 'Title' }, { id: 'summary', icon: 'ti ti-align-left', name: 'Summarization' }, { id: 'label', icon: 'ti ti-font', name: 'Label' }, { id: 'hr', icon: 'ti ti-minus', name: 'Line' }, { id: 'price', icon: 'ti ti-calculator', name: 'Price' }, { id: 'empty', icon: 'ti ti-arrows-v', name: 'Empty space' }];
 
 	exports.make = function(instance, config, element, cls) {
 
 		var render = function() {
 			var builder = [];
+			var header = '';
 			builder.push('<div class="grid-{0}">'.format(config.count));
 
 			var template = instance.maketemplate(instance.component.html);
 			var output = template({ value: config.items });
 
+			if (config.buttons && config.buttons.length)
+				header = '<div class="{0}_cards_header"><button><i class="ti ti-ellipsis-h"></i></button></div>'.format(cls);
+
 			for (var i = 0; i < config.count; i++)
-				builder.push('<div class="{0}_cards">'.format(cls) + output + '</div>');
+				builder.push('<div class="{0}_cards">'.format(cls) + header + output + '</div>');
 			builder.push('</div>');
 			element.html(builder.join(''));
 		};
