--- a/components/columns/render.html
+++ b/components/columns/render.html
@@ -1,4 +1,5 @@
 <style>
+	.CLASS { display: grid; grid-gap: var(--gap); }
 	.CLASS_bg > .UI_components { background-color: #F8F8F8; padding: var(--gap); }
 	.CLASS_rounded > .UI_components { border-radius: var(--radius); }
 </style>
@@ -13,7 +14,10 @@
 	exports.version = '1';
 
 	exports.make = function(instance, config, element, cls) {
-		element.aclass('grid-' + config.count + (config.countmd ? (' grid-md-' + config.countmd) : '') + (config.countsm ? (' grid-sm-' + config.countsm) : '') + (config.countxs ? (' grid-xs-' + config.countxs) : '') + (config.background ? (' ' + cls + '_bg') : '') + (config.rounded ? (' ' + cls + '_rounded') : ''));
+		if (config.hidden)
+			element.aclass('hidden');
+		element.css('grid-template-columns', config.fractions);
+		element.aclass('grid-' + (config.countmd ? (' grid-md-' + config.countmd) : '') + (config.countsm ? (' grid-sm-' + config.countsm) : '') + (config.countxs ? (' grid-xs-' + config.countxs) : '') + (config.background ? (' ' + cls + '_bg') : '') + (config.rounded ? (' ' + cls + '_rounded') : ''));
 		var builder = [];
 		for (var i = 0; i < config.count; i++)
 			builder.push('<div class="UI_components" data-index="{0}"></div>'.format(i));
