--- a/components/display/editor.html
+++ b/components/display/editor.html
@@ -32,5 +32,5 @@
 </script>
 
 <readme>
-	This component sets display sizes according to the current element width. It can affect, for example, the Columns component.
+This component sets display sizes according to the current element width (as a class e.g. `d-xs` or `d-lg`). It can affect, for example, the Columns component.
 </readme>
