--- a/components/datagps/editor.html
+++ b/components/datagps/editor.html
@@ -12,9 +12,9 @@
 	exports.version = '1';
 
 	exports.make = function(instance, config, element) {
-		element.aclass('UI_special m').html('<i class="{0}"></i><label>{name}</label>'.format(instance.component.icon).args(config, 'escape'));
+		element.aclass('UI_special m').html('<i class="{0}"></i><label>{1}<span>{name}</span></label>'.format(instance.component.icon, instance.component.name).args(config, 'escape'));
 		instance.on('configure', function() {
-			element.find('label').text(config.name);
+			element.find('label span').text(config.name);
 		});
 	};
 
