--- a/components/datareader/editor.html
+++ b/components/datareader/editor.html
@@ -6,7 +6,7 @@
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-globe';
 	exports.version = '1';
-	exports.config = { url: '', interval: 0, read: '' };
+	exports.config = { name: 'Name', url: '', interval: 0, read: '' };
 	exports.render = '/components/datareader/render.html';
 	exports.settings = '/components/datareader/settings.html';
 	exports.follow = true;
@@ -14,11 +14,11 @@
 
 	exports.make = function(instance, config, element) {
 
-		element.aclass('UI_special m').html('<i class="{0}"></i><label></label><div></div>'.format(instance.component.icon));
+		element.aclass('UI_special m').html('<i class="{icon}"></i><label>{name}<span></span></label><div><i class="ti ti-long-arrow-right mr5"></i><span class="monospace">---</span></div>'.args(instance.component));
 
 		instance.on('configure', function() {
-			element.find('label').text(config.name);
-			element.find('div').text(config.url || 'Not specified');
+			element.find('label span').text(config.name);
+			element.find('div span').text(config.url || DEF.empty);
 		});
 
 		instance.emit('configure');
