--- a/components/datatransformer/editor.html
+++ b/components/datatransformer/editor.html
@@ -5,7 +5,7 @@
 	exports.group = 'Data';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-robot';
-	exports.config = { value: 'return value', note: 'A custom note' };
+	exports.config = { name: 'Name', value: 'return value' };
 	exports.render = '/components/datatransformer/render.html';
 	exports.settings = '/components/datatransformer/settings.html';
 	exports.follow = true;
@@ -13,7 +13,7 @@
 
 	exports.make = function(instance, config, element) {
 
-		element.aclass('UI_special m').html('<i class="{0}"></i><label>{name}</label><div>{note}</div>'.format(instance.component.icon).args(config, 'escape'));
+		element.aclass('UI_special m').html('<i class="{0}"></i><label>{1}<span>{name}</span></label>'.format(instance.component.icon, instance.component.name).args(config, 'escape'));
 
 		element.on('dblclick', 'div', function(e) {
 			e.preventDefault();
@@ -28,7 +28,7 @@
 		});
 
 		instance.on('configure', function() {
-			element.find('label').text(config.name);
+			element.find('label span').text(config.name);
 		});
 
 		instance.on('stringify', function(meta, isbuild) {
