--- a/components/input/editor.html
+++ b/components/input/editor.html
@@ -5,7 +5,7 @@
 	exports.group = 'Data';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-expand';
-	exports.config = { read: '' };
+	exports.config = { name: 'Name', read: '' };
 	exports.render = '/components/input/render.html';
 	exports.settings = '/components/input/settings.html';
 	exports.inputs = [{ id: 'load', name: 'Load data' }];
@@ -14,9 +14,9 @@
 	exports.gap = true;
 
 	exports.make = function(instance, config, element) {
-		element.aclass('UI_special').html('<i class="{0}"></i><label>{name}</label>'.format(instance.component.icon).args(config, 'escape'));
+		element.aclass('UI_special').html('<i class="{0}"></i><label>{1}<span>{name}</span></label>'.format(instance.component.icon, instance.component.name).args(config, 'escape'));
 		instance.on('configure', function() {
-			element.find('label').text(config.name);
+			element.find('label span').text(config.name);
 		});
 	};
 
