--- a/components/sendtoinput/editor.html
+++ b/components/sendtoinput/editor.html
@@ -5,17 +5,25 @@
 	exports.group = 'Data';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-compress';
-	exports.config = { input: '', write: '', read: '' };
+	exports.config = { name: 'Name', input: '', write: '', read: '' };
 	exports.render = '/components/sendtoinput/render.html';
 	exports.settings = '/components/sendtoinput/settings.html';
 	exports.version = '1';
 	exports.gap = true;
 
 	exports.make = function(instance, config, element) {
-		element.aclass('UI_special').html('<i class="{icon}"></i><label>{0}</label>'.format(config.name.encode()).args(instance.component));
-		instance.on('configure', function() {
-			element.find('label').text(config.name);
-		});
+
+		element.aclass('UI_special').html('<i class="{icon}"></i><label>{name}<span>{0}</span></label><div><i class="ti ti-long-arrow-right mr5"></i><span>---</span></div>'.format(config.name.encode()).args(instance.component));
+
+		var rename = function() {
+			var name = DEF.cl.inputs.findValue('id', config.input, 'name', DEF.empty);
+			element.find('div span').text(name);
+			element.find('label span').text(config.name);
+		};
+
+		instance.on('refresh', rename);
+		instance.on('ready', rename);
+		instance.on('configure', rename);
 	};
 
 </script>
