--- a/components/sound/editor.html
+++ b/components/sound/editor.html
@@ -5,17 +5,19 @@
 	exports.group = 'Logical';
 	exports.icon = 'ti ti-volume';
 	exports.author = 'Total.js';
-	exports.config = { border: true, type: 'Beep', volume: 20, condition: 'positive' };
+	exports.config = { name: 'Name', border: true, type: 'Beep', volume: 20, condition: 'positive' };
 	exports.render = '/components/sound/render.html';
 	exports.settings = '/components/sound/settings.html';
 	exports.version = '1';
 	exports.gap = true;
 
 	exports.make = function(instance, config, element) {
-		element.html('<div class="UI_special"><i class="{icon}"></i><label>{name}</label><div>{0}</div></div>'.format(config.type).args(instance.component));
+		element.aclass('UI_special').html('<i class="{icon}"></i><label>{name}<span></span></label><div><i class="ti ti-arrow-right mr5"></i><span></span></div>'.args(instance.component));
 		instance.on('configure', function() {
-			element.find('div').text(config.type);
+			element.find('label span').text(config.name);
+			element.find('div span').text(config.type);
 		});
+		instance.emit('configure');
 	};
 
 </script>
