--- a/components/show/render.html
+++ b/components/show/render.html
@@ -25,7 +25,7 @@
 				value2 = config.value || '';
 				break;
 			case 'expression':
-				compare = FN('value=>' + config.condition);
+				compare = FN('value=>' + config.value);
 				break;
 		}
 
