--- a/components/button/editor.html
+++ b/components/button/editor.html
@@ -51,3 +51,15 @@
 	};
 
 </script>
+
+<readme>
+	# Button Component
+
+	The Button component allows you to customize various aspects of buttons in your web application. You can configure the following options:
+
+	- **Path:** Set the path for the button.
+	- **Font and Style:** Customize the font and style of the button.
+	- **Input:** Define the input settings for the button.
+	- **Name:** Specify the name or label for the button.
+
+</readme>
