--- a/components/callout/editor.html
+++ b/components/callout/editor.html
@@ -80,3 +80,15 @@
 	};
 
 </script>
+
+<readme>
+	# Callout Component
+
+	The Callout component is a versatile element that allows you to create various callout messages in your web application. With this component, you can easily set the following properties:
+
+	- **Path:** Define the path or location for the callout.
+	- **Name:** Specify a name or label for the callout.
+	- **Icon:** Customize the icon associated with the callout.
+	- **Type:** Choose from different callout types: alert, error, message, and success.
+
+</readme>
