--- a/components/columns/editor.html
+++ b/components/columns/editor.html
@@ -74,3 +74,13 @@
 	};
 
 </script>
+
+<readme>
+	# Columns Component
+
+	The Columns component is a valuable tool for dividing and organizing your content into a specified number of parts within your web application. With this component, you can achieve the following:
+
+	- **Content Division:** Easily divide your content into a specific number of parts.
+	- **Settings:** Configure the number of parts to suit your content organization needs.
+
+</readme>
