--- a/components/counter/editor.html
+++ b/components/counter/editor.html
@@ -18,3 +18,7 @@
 	};
 
 </script>
+
+<readme>
+	This component keeps track of the count and increments it every time it receives a notify-event.
+</readme>
