--- a/components/datagrid/editor.html
+++ b/components/datagrid/editor.html
@@ -37,3 +37,7 @@
 	};
 
 </script>
+
+<readme>
+	This component displays data from your datasource in a grid. In settings you can set datasource, as well as style of grid columns.
+</readme>
