--- a/components/enable/editor.html
+++ b/components/enable/editor.html
@@ -22,3 +22,6 @@
 	};
 
 </script>
+<readme>
+	This component enables editing of elements in it, under specified conditions, you can set in settings.
+</readme>
