--- a/components/form/editor.html
+++ b/components/form/editor.html
@@ -34,3 +34,7 @@ The form collects only components with defined paths.
 	};
 
 </script>
+
+<readme>
+	The components creates a formular.
+</readme>
