--- a/components/image/editor.html
+++ b/components/image/editor.html
@@ -37,3 +37,7 @@
 	};
 
 </script>
+
+<readme>
+	This component inserts image from your device, or from specific path. Just click on the component in the editor, and insert comfortably image from your device, or set a path to your image in settings.
+</readme>
