--- a/components/map/editor.html
+++ b/components/map/editor.html
@@ -24,3 +24,7 @@
 	};
 
 </script>
+
+<readme>
+	This component displays a map, with a position, you set in settings as a map center. In settings you can change the style of this component.
+</readme>
