--- a/components/richtext/editor.html
+++ b/components/richtext/editor.html
@@ -30,5 +30,10 @@
 </script>
 
 <readme>
-
+	Usage:ripple="false"
+		- Configure tis component by providing your API key, enabling plugins, and toggling autosave.
+		
+	- **API Key**: You can enter your API key, which is required for using the editor.
+	- **Plugins**: You can select which TinyMCE plugins to enable for the editor.
+	- **Autosave**: You can toggle autosave functionality.
 </readme>
