--- a/components/show/editor.html
+++ b/components/show/editor.html
@@ -20,3 +20,8 @@
 	};
 
 </script>
+
+
+<readme>
+	This component shows/hides components you put into it. You cen set your circumstances in settings of this component.
+</readme>
