--- a/components/stylebox/editor.html
+++ b/components/stylebox/editor.html
@@ -43,3 +43,7 @@
 	};
 
 </script>
+
+<readme>
+	This component is a content component, that displays content you put into it in editor, and add to it the styles according to your setttings.
+</readme>
