last last commit

--- a/components/stylebox/editor.html
+++ b/components/stylebox/editor.html
@@ -45,5 +45,5 @@
 </script>
 
 <readme>
-	This component is a content component, that displays content you put into it in editor, and add to it the styles according to your setttings.
+	This component is a content component, that displays content you put into it in editor. You can style this component in setttings.
 </readme>
