--- a/components/flowoutput/render.html
+++ b/components/flowoutput/render.html
@@ -17,8 +17,10 @@
 		if (config.target.length) {
 
 			instance.app.on('output', function(opt) {
-				if (opt.instanceid !== instance.id && config.target.includes(opt.id))
+				if (opt.instanceid !== instance.id && config.target.includes(opt.id)) {
+					opt.cancel = true; // for j-UIStudio component
 					instance.output('output', opt.data);
+				}
 			});
 
 		} else {
