--- a/components/flowoutput/render.html
+++ b/components/flowoutput/render.html
@@ -18,7 +18,7 @@
 
 			instance.app.on('output', function(opt) {
 				if (opt.instanceid !== instance.id && config.target.includes(opt.id)) {
-					opt.cancel = true; // for j-UIStudio component
+					opt.processed = true; // for j-UIStudio component
 					instance.output('output', opt.data);
 				}
 			});
