--- a/components/html/editor.html
+++ b/components/html/editor.html
@@ -11,7 +11,7 @@
 	exports.version = '1';
 
 	exports.make = function(instance, config, element) {
-		instance.on('configure', () => element.html(config.html);
+		instance.on('configure', () => element.html(config.html));
 		instance.emit('configure');
 	};
 
