--- a/components/externalimage/editor.html
+++ b/components/externalimage/editor.html
@@ -6,8 +6,8 @@
 	exports.icon = 'ti ti-image';
 	exports.author = 'Total.js';
 	exports.config = { src: 'https://cdn.totaljs.com/logo.png', rounded: true, width: '', height: '', link: false, url: '', newtab: true };
-	exports.render = '/components/{0}/render.html';
-	exports.settings = '/components/{0}/settings.html';
+	exports.render = '/components/externalimage/render.html';
+	exports.settings = '/components/externalimage/settings.html';
 	exports.version = '1';
 
 	exports.make = function(instance, config, element) {
