--- a/components/html/editor.html
+++ b/components/html/editor.html
@@ -6,8 +6,8 @@
 	exports.icon = 'ti ti-html';
 	exports.author = 'Total.js';
 	exports.config = { html: 'You <b>HTML</b> code' };
-	exports.render = '/components/{0}/render.html';
-	exports.settings = '/components/{0}/settings.html';
+	exports.render = '/components/html/render.html';
+	exports.settings = '/components/html/settings.html';
 	exports.version = '1';
 
 	exports.make = function(instance, config, element) {
