--- a/components/html/editor.html
+++ b/components/html/editor.html
@@ -3,7 +3,7 @@
 	exports.id = 'html';
 	exports.group = 'Content';
 	exports.name = 'HTML';
-	exports.icon = 'ti ti-html';
+	exports.icon = 'ti ti-html5';
 	exports.author = 'Total.js';
 	exports.config = { html: 'You <b>HTML</b> code' };
 	exports.render = '/components/html/render.html';
