--- a/components/html/render.html
+++ b/components/html/render.html
@@ -2,7 +2,7 @@
 
 	exports.id = 'html';
 	exports.name = 'HTML';
-	exports.icon = 'ti ti-html';
+	exports.icon = 'ti ti-html5';
 	exports.author = 'Total.js';
 	exports.version = '1';
 
