Improved `Checkbox` by adding `reverse` option.

--- a/components/checkbox/editor.html
+++ b/components/checkbox/editor.html
@@ -11,7 +11,7 @@
 	exports.group = 'Controls';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-check-square';
-	exports.config = { required: false };
+	exports.config = { required: false, reverse: false };
 	exports.settings = '/components/checkbox/settings.html';
 	exports.render = '/components/checkbox/render.html';
 	exports.version = '1';
