--- a/components/checkbox/settings.html
+++ b/components/checkbox/settings.html
@@ -1,5 +1,4 @@
 <div class="padding">
-
 	<ui-component name="input" path="?.required" config="type:checkbox" class="b">Required</ui-component>
-
+	<ui-component name="input" path="?.reverse" config="type:checkbox">Reverse value</ui-component>
 </div>
